Install with npm ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
 
       - run:
           name: Install
-          command: npm i
+          command: npm ci
 
       - save_cache:
           paths:
